--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 @font-face {
+  font-family: "Lazzer TRIAL";
+  src: url('./fonts/._LazzerTRIAL-Thin.otf');
+}
+
+@font-face {
   font-family: Arras;
   src: url(./fonts/Arras.otf);
 }
